--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+:root {
+	--font-family: 'Airbnb Cereal', sans-serif;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -6,6 +10,7 @@ html {
 	--scroll-behavior: smooth;
 	scroll-behavior: var(--scroll-behavior);
 }
+
 @media (prefers-reduced-motion: reduce) {
 	html {
 		--scroll-behavior: auto;
@@ -24,11 +29,24 @@ h2 {
 }
 
 .nav-sections {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  width: 100%;
-  background-color: #fefe;
-  box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.12);
-  z-index: 100;
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	width: 100%;
+	background-color: #fefe;
+	box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.12);
+	z-index: 100;
+}
+
+.page-sections {
+	margin: 0 auto;
+	max-width: 75ch;
+}
+
+.page-section {
+	margin: calc(1.2rem * 2) 0;
+}
+
+.page-section > * + * {
+	margin-top: calc(1.2rem * 1.5);
 }
