--- a/index.css
+++ b/index.css
@@ -50,3 +50,11 @@ h2 {
 .page-section > * + * {
 	margin-top: calc(1.2rem * 1.5);
 }
+
+.nav-sections .menu-item-link {
+	display: block;
+	padding: 12px 16px;
+	font-size: 15px;
+	text-decoration: none;
+	white-space: nowrap;
+  }
